Kubernetes/backend/keycloak/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-stateful-set
  namespace: keycloak
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keycloak
  serviceName: keycloak-svc-headless
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - keycloak
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: registry.gitlab.com/startfleet/startfleet-keycloak:v1.0
        imagePullPolicy: IfNotPresent
        name: keycloak
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: keycloak-registry-secret
