Kubernetes/backend/keycloak/headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc-headless
  namespace: keycloak
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: keycloak
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
