Kubernetes/backend/keycloak/service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: keycloak
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: keycloak
